Add password.fxml and PasswordController for access to mail service

--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.iaroslaveremeev.tablefx/com.iaroslaveremeev.tablefx.MainController
+                            <mainClass>com.iaroslaveremeev.tablefx/com.iaroslaveremeev.tablefx.conrollers.MainController
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
